--- a/contao/templates/content_element/gallery.html.twig
+++ b/contao/templates/content_element/gallery.html.twig
@@ -4,10 +4,10 @@
   {% if data.use_fleximages %} 
     {% if figure.image.img.width and figure.image.img.height %}
       {% set figure_attributes = attrs()
+        .addClass('item')
         .set('data-w', figure.image.img.width) 
-        .set('data-h', figure.image.img.height) 
+        .set('data-h', figure.image.img.height)
       %}
-      {% set figure_attributes = attrs(figure_attributes|default).addClass('item') %}
     {% endif %}
     {{ parent() }}
   {% else %}
@@ -17,9 +17,7 @@
 
 {% block content %}
   {% if data.use_fleximages %} 
-    <div class="flex-images id_{{ data.id }}">
-      {{ parent() }}
-    </div>
+    <div class="flex-images id_{{ data.id }}">{{ parent() }}</div>
   {% else %}
     {{ parent() }}  
   {% endif %}
